# AI-Assistant-With-MCP-Servers

./: .env  .gitignore  README.md  app.py  browser_mcp.json  main.py  pyproject.toml
v2.0.0/: client.py  mathserver.py  weather.py
