[project]
name = "ai-assistant-with-mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.6",
    "mcp>=1.25.0",
    "mcp-use>=1.5.2",
]
